# CPP-PROGRAM

./: CPP_SETUP.md  README.md
ADVANCED/ROBOTICS_CV/: build.bat  eigen_linear_algebra_robotics.cpp  opencv_basic_vision_cpp.cpp  pid_controller_cpp.cpp  ros2_style_node_pattern_cpp.cpp
ADVANCED/SYSTEMS_PERFORMANCE/: build.bat  custom_memory_pool.cpp  move_semantics_optimization.cpp  multithreading_modern_cpp.cpp  profiling_and_benchmarking.cpp  raii_resource_management.cpp
ADVANCED/TRENDING/: build.bat  json_parsing_modern_cpp.cpp  modern_cpp20_features_demo.cpp  network_socket_basics_cpp.cpp
ADVANCED/TRENDING/cmake_multi_module_project/: CMakeLists.txt  build.bat
ADVANCED/TRENDING/cmake_multi_module_project/include/mathutils/: geometry.h  stats.h
ADVANCED/TRENDING/cmake_multi_module_project/src/: geometry.cpp  main.cpp  stats.cpp
ADVANCED/TRENDING/cmake_multi_module_project/tests/: test_mathutils.cpp
BEGINNER/day01/: README.md  build.bat  exercises.cpp  lesson.cpp  mini_project.cpp  solutions.cpp
BEGINNER/day02/: README.md  build.bat  exercises.cpp  lesson.cpp  mini_project.cpp  solutions.cpp
BEGINNER/day03/: README.md  build.bat  exercises.cpp  lesson.cpp  mini_project.cpp  solutions.cpp
BEGINNER/day04/: README.md  build.bat  exercises.cpp  lesson.cpp  mini_project.cpp  solutions.cpp
BEGINNER/day05/: README.md  build.bat  exercises.cpp  lesson.cpp  mini_project.cpp  solutions.cpp
BEGINNER/day06/: README.md  build.bat  exercises.cpp  lesson.cpp  mini_project.cpp  solutions.cpp
BEGINNER/day07/: README.md  build.bat  exercises.cpp  lesson.cpp  (+2 more)
(+51 files in other folders)
